compiler/test/fail_compilation/imports/issue18058b.d
module issue18058b;

private void foo(float x) {}
void foo(int x) {}
